New Crowdin updates (#1775)

--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Cette méthode d’API n’est pas encore implémentée.",
   "api.errors.GenericApiError": "Une erreur s’est produite, veuillez réessayer ultérieurement.",
   "api.errors.IncorrectPasswordError": "Mot de passe incorrect.",
-  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
+  "api.errors.NotEnoughMoneyToSendError": "Fonds insuffisants pour effectuer cette transaction.",
   "api.errors.PromiseNotCalledYetError": "Résultat accédé avant la fin de l'exécution.",
   "api.errors.ReportRequestError": "Il y a eu un problème avec l'envoi de la demande.",
   "api.errors.WalletAlreadyImportedError": "Le wallet que vous essayez d'importer existe déjà.",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Paramètres",
   "sidebar.transfer": "Réclamation / Transfert",
   "sidebar.wallets": "Mes wallets",
-  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
+  "testnet.shelley.label.message": "VOUS ÊTES SUR LE RÉSEAU TEST.",
   "transfer.form.instructions.step1.text": "La restauration du solde prend en moyenne 1 minute. Lors de l'étape suivante, vous verrez une transaction se proposer à vous afin de déplacer tous vos fonds vers Yoroi. Veuillez vérifier avec minutie les détails de la transaction. Vous devrez vous acquitter des frais de transactions standards sur le réseau Cardano afin d'effectuer la transaction.",
   "transfer.form.masterkey.input.label": "Clé maître",
   "transfer.instructions.attention.title.label": "Attention",
@@ -495,7 +495,7 @@
   "wallet.delegation.transaction.success.explanation": "Suivre l'état du groupe d'enjeu (pool) et le temps restant pour recevoir une récompense à partir de la page du tableau de bord.",
   "wallet.delegation.transaction.success.title": "Délégation réussie",
   "wallet.deprecation.byronLine1": "La mise à jour du protocole Shelley ajoute un nouveau type de portefeuille Shelley qui permet la délégation.",
-  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine2": "Pour déléguer vos {ticker}, vous devrez passer à un portefeuille Shelley.",
   "wallet.hw.common.error.101": "Les autorisations nécessaires n'ont pas été fournies par l'utilisateur. Veuillez réessayer.",
   "wallet.hw.incorrectDevice": "Appareil incorrect détecté. Appareil attendu {expectedDeviceId}, mais {responseDeviceId} a été obtenu. Veuillez brancher le bon appareil",
   "wallet.hw.incorrectVersion": "Détection d'une version incorrecte de l'appareil. Nous supportons la version {supportedVersions} mais vous avez la version {responseVersion}.",
@@ -551,12 +551,12 @@
   "wallet.receive.page.internalWarning1": "Les adresses internes (ou adresses de \"change\") préservent votre vie privée en masquant les adresses qui vous appartiennent sur la blockchain",
   "wallet.receive.page.internalWarning2": ": ces adresses sont indiquées ici à des fins d'audit personnel et ne doivent <strong>jamais</strong> être utilisées.",
   "wallet.receive.page.label": "Étiquette",
-  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
+  "wallet.receive.page.mangledWarning1": "Les adresses mélangées contribuent à votre solde en {ticker}, mais elles ont une préférence de délégation incorrecte",
   "wallet.receive.page.noResultsFoundLabel": "Pas de résultats trouvés",
   "wallet.receive.page.notFoundAnyAddresses": "Nous n'avons trouvé aucune adresse correspondant à vos critères.",
   "wallet.receive.page.outputAmountUTXO": "Solde (somme des UTXO)",
   "wallet.receive.page.rewardAddressLine1": "Votre adresse de récompense contient vos récompenses et est utilisée pour valider tout changement dans vos préférences de délégation",
-  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
+  "wallet.receive.page.rewardAddressLine2": "Vous ne pouvez pas envoyer d'{ticker} sur des adresses de récompenses, mais nous vous les montrons à des fins d'audit personnel",
   "wallet.receive.page.unmangeLabel": "Corriger la préférence de délégation",
   "wallet.receive.page.verifyAddressLabel": "Vérifier l'adresse",
   "wallet.receive.page.walletAddressLabel": "Votre adresse de wallet",
@@ -603,11 +603,11 @@
   "wallet.send.confirmationDialog.walletPasswordLabel": "Mot de passe de paiement",
   "wallet.send.form.calculatingFee": "Calcul des frais de transaction...",
   "wallet.send.form.cannotSendToLegacy": "Vous ne pouvez pas envoyer à des adresses de type Legacy (toute adresse créée avant le 29 novembre 2019)",
-  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
+  "wallet.send.form.cannotSendToP2SH": "Vous ne pouvez pas envoyer vers des adresses de type \"pay-to-script-hash\"",
   "wallet.send.form.cannotSendToReward": "Vous ne pouvez pas envoyer à un compte de compensation",
   "wallet.send.form.errors.invalidAddress": "Veuillez entrer une adresse valide.",
   "wallet.send.form.errors.invalidAmount": "Veuillez entrer un montant valide.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
+  "wallet.send.form.errors.tooSmallUtxo": "Vous ne pouvez pas envoyer moins de {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Adresse du wallet",
   "wallet.send.form.receiver.label": "Destinataire",
   "wallet.send.form.sendAll.checkboxLabel": "Envoyer tous les {currency}",
@@ -708,12 +708,12 @@
   "wallet.transfer.deregister.line5": "La désinscription signifie que cette clé d'enjeu ne sera plus récompensée tant que vous ne l'aurez pas réenregistrée (généralement en déléguant à nouveau à un pool)",
   "wallet.transfer.deregister.noNeedToDeregister": "Vous n'avez PAS besoin de vous désinscrire pour déléguer à un autre pool. Vous pouvez modifier votre préférence de délégation à tout moment",
   "wallet.transfer.deregister.title": "Désinscrire également la clé de mise en jeu ?",
-  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.instruction": "Tout {ticker} réclamé sera transféré dans votre portefeuille actuellement sélectionné",
   "wallet.undelegation.transaction.explanationLine1": "Vous n'avez PAS besoin d'arrêter une délégation avant de changer de groupe d'enjeu (pool)",
   "wallet.undelegation.transaction.explanationLine2": "Cela prendra 2 époques après la fin de l'époque courante pour que votre choix d'arrêter de déléguer soit effectif",
   "wallet.unsupported.subtitle": "Le portefeuille sélectionné ne prend pas en charge cette fonctionnalité",
   "wallet.unsupported.title": "Type de portefeuille non supporté",
-  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
+  "wallet.withdrawal.transaction.unregister": "Cette opération va désinscrire une ou plusieurs clés de staking, ce qui vous permettra de récupérer votre dépôt de {refundAmount} {ticker}",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copier dans le presse-papier",
   "widgets.explorer.tooltip": "Aller sur {websiteName}",
   "widgets.warningBox.headerText": "ATTENTION :",
