--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Este método de API ainda não está implementado.",
   "api.errors.GenericApiError": "Ocorreu um erro. Por favor tente novamente mais tarde.",
   "api.errors.IncorrectPasswordError": "Senha incorreta",
-  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
+  "api.errors.NotEnoughMoneyToSendError": "Saldo insuficiente para realizar essa transação.",
   "api.errors.PromiseNotCalledYetError": "Resultado acessado antes da conclusão da execução.",
   "api.errors.ReportRequestError": "Houve um problema ao enviar a solicitação para o suporte.",
   "api.errors.WalletAlreadyImportedError": "A carteira que você está tentando importar já existe.",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Configurações",
   "sidebar.transfer": "Reivindicar / Transferir",
   "sidebar.wallets": "Minhas carteiras",
-  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
+  "testnet.shelley.label.message": "VOCÊ ESTÁ NA REDE DE TESTE.",
   "transfer.form.instructions.step1.text": "Demora cerca de 1 minuto para restaurar o seu saldo. Na próxima etapa, você será apresentado a uma transação que movimentará todos os seus fundos. Por favor, revise os detalhes da transação com cuidado. Você precisará pagar uma taxa de transação padrão na rede Cardano para realizar a transação.",
   "transfer.form.masterkey.input.label": "Chave mestra",
   "transfer.instructions.attention.title.label": "Atenção",
