--- a/app/i18n/locales/sk-SK.json
+++ b/app/i18n/locales/sk-SK.json
@@ -1,61 +1,61 @@
 {
-  "api.errors.ApiMethodNotYetImplementedError": "This API method is not yet implemented.",
-  "api.errors.GenericApiError": "An error occurred, please try again later.",
-  "api.errors.IncorrectPasswordError": "Incorrect wallet password.",
-  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
-  "api.errors.PromiseNotCalledYetError": "Result accessed before execution finished.",
-  "api.errors.ReportRequestError": "There was a problem sending the support request.",
-  "api.errors.WalletAlreadyImportedError": "The wallet you are trying to import already exists.",
-  "api.errors.WalletAlreadyRestoredError": "The wallet you are trying to restore already exists.",
-  "api.errors.WalletFileImportError": "Wallet could not be imported. Please make sure you are providing the correct file.",
-  "api.errors.checkAdressesInUseApiError": "Error received from server while checking used addresses.",
-  "api.errors.currentCoinPriceError": "Current coin price data not available now.",
-  "api.errors.discoverAddressesError": "Error received from API method call while discovering addresses.",
-  "api.errors.generateTransferTxError": "Error while generating transaction.",
+  "api.errors.ApiMethodNotYetImplementedError": "Táto API metóda nie je zatiaľ implementovaná.",
+  "api.errors.GenericApiError": "Vyskytla sa chyba, skúste to prosím neskôr.",
+  "api.errors.IncorrectPasswordError": "Nesprávne heslo peňaženky.",
+  "api.errors.NotEnoughMoneyToSendError": "Na uskutočnenie tejto transakcie nemáte dostatok prostriedkov.",
+  "api.errors.PromiseNotCalledYetError": "Prístup k výsledku pred dokončením výpočtu.",
+  "api.errors.ReportRequestError": "Vyskytol sa problém pri posielaní požiadavku o podporu.",
+  "api.errors.WalletAlreadyImportedError": "Peňaženka, ktorú sa snažíte importovať, už existuje.",
+  "api.errors.WalletAlreadyRestoredError": "Peňaženka, ktorú sa snažíte obnoviť, už existuje.",
+  "api.errors.WalletFileImportError": "Peňaženku nebolo možné importovať. Uistite sa, že používate spávny súbor.",
+  "api.errors.checkAdressesInUseApiError": "Pri kontrole použitých adries server vrátil chybu.",
+  "api.errors.currentCoinPriceError": "Aktuálne údaje o cene nie sú momentálne dostupné.",
+  "api.errors.discoverAddressesError": "API volanie vrátilo pri objavovaní adries chybu.",
+  "api.errors.generateTransferTxError": "Chyba pri generovaní transakcie.",
   "api.errors.getAccountStateApiError": "Error received from server while getting account state.",
-  "api.errors.getAddressesWithFundsError": "Error while getting addresses with funds.",
-  "api.errors.getAllUTXOsForAddressesError": "Error received from api method call while getting UTxOs.",
-  "api.errors.getBalanceError": "Error while getting balance.",
+  "api.errors.getAddressesWithFundsError": "Chyba pri získavaní adries s prostriedkami.",
+  "api.errors.getAllUTXOsForAddressesError": "API volanie vrátilo pri získavaní UTxOs chybu.",
+  "api.errors.getBalanceError": "Chyba pri získavaní zostatku.",
   "api.errors.getBestBlockApiError": "Error received from server while getting best block.",
   "api.errors.getPoolInfoApiError": "Error received from server while getting pool info.",
   "api.errors.getReputationError": "Error received from server while getting reputation.",
   "api.errors.getRewardHistoryApiError": "Error received from server while getting reward history.",
-  "api.errors.getTxHistoryForAddressesApiError": "Error received from server while getting transactions.",
-  "api.errors.getTxsBodiesForUTXOsApiError": "Error received from server while getting TxBodies.",
-  "api.errors.getTxsBodiesForUTXOsError": "Error received from api method call while getting TxBodies.",
-  "api.errors.getUtxosForAddressesApiError": "Error received from server while getting UTxOs.",
-  "api.errors.getUtxosSumsForAddressesApiError": "Error received from server while getting balance.",
-  "api.errors.hardwareUnsupportedError": "This action is not supported for the currently selected hardware.",
-  "api.errors.histoicalCoinPriceError": "Historical coin price data not available now.",
-  "api.errors.invalidMnemonicError": "Invalid phrase entered, please check.",
-  "api.errors.invalidWitnessError": "The signature is invalid.",
-  "api.errors.noInputsError": "The wallet restored from your recovery phrase is empty. Please check your recovery phrase and attempt restoration again.",
-  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
-  "api.errors.pendingTransactionError": "Error while updating pending transactions.",
-  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
-  "api.errors.rewardAddressEmpty": "Reward address is empty.",
+  "api.errors.getTxHistoryForAddressesApiError": "Pri získavaní transakcií server vrátil chybu.",
+  "api.errors.getTxsBodiesForUTXOsApiError": "Pri získavaní TxBodies server vrátil chybu.",
+  "api.errors.getTxsBodiesForUTXOsError": "API volanie vrátilo pri získavaní TxBodies chybu.",
+  "api.errors.getUtxosForAddressesApiError": "Pri získavaní UTxOs server vrátil chybu.",
+  "api.errors.getUtxosSumsForAddressesApiError": "Pri získavaní zostatku server vrátil chybu.",
+  "api.errors.hardwareUnsupportedError": "Táto akcia nie je momentálne pre daný hardvér podporovaná.",
+  "api.errors.histoicalCoinPriceError": "Historické údaje o cene nie sú momentálne dostupné.",
+  "api.errors.invalidMnemonicError": "Zadali ste nesprávnu frázu, skontrolujte ju prosím.",
+  "api.errors.invalidWitnessError": "Podpis je neplatný.",
+  "api.errors.noInputsError": "Peňaženka obnovená z vašej bezpečnostnej frázy je prázdna. Prosíme, skontrolujte ju a vyskúšajte to znova.",
+  "api.errors.noOutputsError": "Transakcia vyžaduje aspoň jeden výstup, ale žiaden nebol pridaný",
+  "api.errors.pendingTransactionError": "Pri aktualizácii čakajúcich transakcií sa vyskytla chyba.",
+  "api.errors.poolMissingApiError": "Tento pool sme nenašli. Skontrolujte ID a overte si, že pool nebol odregistrovaný.",
+  "api.errors.rewardAddressEmpty": "Adresa odmien je prázdna.",
   "api.errors.rollbackApiError": "Rollback was detected.",
-  "api.errors.sendTransactionApiError": "Error received from server while sending transaction.",
-  "api.errors.sendTransactionError": "Error received from api method call while sending transaction.",
-  "api.errors.serverStatusError": "Connection to the server failed. Please check your internet connection or our Twitter account (https://twitter.com/YoroiWallet).",
-  "api.errors.transactionError": "Error while creating transaction.",
-  "api.errors.unusedAddressesError": "You cannot generate more than 20 consecutive unused addresses.",
-  "api.errors.updateAdaTxsHistoryError": "Error while updating Ada transactions history.",
-  "api.errors.updateAdaWalletError": "Error while updating Ada wallet.",
+  "api.errors.sendTransactionApiError": "Pri posielaní transakcie server vrátil chybu.",
+  "api.errors.sendTransactionError": "API volanie vrátilo pri posielaní transakcie chybu.",
+  "api.errors.serverStatusError": "Pripojenie k serveru zlyhalo. Skontrolujte prosím pripojenie k internetu alebo náš Twitter účet (https://twitter.com/YoroiWallet).",
+  "api.errors.transactionError": "Chyba pri vytváraní transakcie.",
+  "api.errors.unusedAddressesError": "Nie je možné vytvoriť viac ako 20 po sebe idúcich nepoužitých adries.",
+  "api.errors.updateAdaTxsHistoryError": "Pri aktualizácii transakčnej histórie Ada sa vyskytla chyba.",
+  "api.errors.updateAdaWalletError": "Pri aktualizácii Ada peňaženky sa vyskytla chyba.",
   "app.errors.storageLoadError": "Failed to access storage. Yoroi needs to access to storage (\"IndexedDB\") to properly manage wallets. Your browser may either not support IndexedDB or it may be disabled due to your privacy settings (such as private browsing)",
-  "app.errors.unableToLoad": "Unable to load!",
-  "app.errors.unexpectedError": "Something unexpected happened. Please retry.",
-  "app.errors.unknowError": "Unknown error.",
-  "crash.screen.title": "Yoroi crashed",
-  "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
-  "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
-  "daedalusTransfer.error.webSocketRestoreError": "Error while restoring blockchain addresses.",
-  "daedalusTransfer.errorPage.title.label": "Unable to restore Daedalus wallet.",
-  "daedalusTransfer.form.instructions.step0.text": "Enter the 12-word recovery phrase used to back up your Daedalus wallet to restore the balance and transfer all the funds from Daedalus to Yoroi.",
-  "daedalusTransfer.form.instructions.step0MasterKey.text": "Enter the unencrypted master key for your Daedalus wallet to restore the balance and transfer all the funds from Daedalus to Yoroi.",
-  "daedalusTransfer.form.instructions.step0Paper.text": "Enter the 27-word recovery phrase used to back up your Daedalus Paper wallet to restore the balance and transfer all the funds from Daedalus to Yoroi.",
-  "daedalusTransfer.instructions.attention.button.label": "Daedalus Wallet",
-  "daedalusTransfer.instructions.attention.masterKey.button.label": "Daedalus Master Key",
+  "app.errors.unableToLoad": "Nedá sa načítať!",
+  "app.errors.unexpectedError": "Stalo sa niečo nečakané. Skúste to znovu.",
+  "app.errors.unknowError": "Neznáma chyba.",
+  "crash.screen.title": "Yoroi spadlo",
+  "daedalusTransfer.error.noTransferTxError": "Žiadna transakcia nečaká na odoslanie.",
+  "daedalusTransfer.error.transferFundsError": "Prostriedky nie je možné previesť.",
+  "daedalusTransfer.error.webSocketRestoreError": "Pri obnove adries z blockchainu sa vyskytla chyba.",
+  "daedalusTransfer.errorPage.title.label": "Daedalus peňaženku nebolo možné obnoviť.",
+  "daedalusTransfer.form.instructions.step0.text": "Zadajte 12-slovnú frázu používanú na zálohu Daedalus peňaženky, aby ste obnovili zostatok a previedli všetky prostriedky z Daedalus do Yoroi.",
+  "daedalusTransfer.form.instructions.step0MasterKey.text": "Zadajte nešifrovaný hlavný kľúč, aby ste obnovili zostatok a previedli všetky prostriedky z Daedalus do Yoroi.",
+  "daedalusTransfer.form.instructions.step0Paper.text": "Zadajte 27-slovnú frázu používanú na zálohu papierovej Daedalus peňaženky, aby ste obnovili zostatok a previedli všetky prostriedky z Daedalus do Yoroi.",
+  "daedalusTransfer.instructions.attention.button.label": "Daedalus peňaženka",
+  "daedalusTransfer.instructions.attention.masterKey.button.label": "Daedalus hlavný kľúč",
   "daedalusTransfer.instructions.attention.paper.button.label": "Daedalus Paper Wallet",
   "daedalusTransfer.instructions.attention.title": "Transfer all funds from",
   "daedalusTransfer.waiting.checkingAddresses.generatingTx": "Generating transfer transaction",
@@ -115,16 +115,16 @@
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
   "global.language.english": "English",
-  "global.language.french": "Français",
-  "global.language.german": "Deutsch",
-  "global.language.indonesian": "Bahasa Indonesia",
-  "global.language.italian": "Italiano",
-  "global.language.japanese": "日本語",
-  "global.language.korean": "한국어",
-  "global.language.portuguese": "Português",
-  "global.language.russian": "Pусский",
-  "global.language.spanish": "Español",
-  "global.language.turkish": "Turkish",
+  "global.language.french": "Francúzština",
+  "global.language.german": "Nemčina",
+  "global.language.indonesian": "Indonézština",
+  "global.language.italian": "Taliančina",
+  "global.language.japanese": "Japončina",
+  "global.language.korean": "Kórejčina",
+  "global.language.portuguese": "Portugalčina",
+  "global.language.russian": "Ruština",
+  "global.language.spanish": "Španielčina",
+  "global.language.turkish": "Turečtina",
   "global.passwordInstructionsPaperWallet": "Note: Paper Wallet password needs to be at least <strong>10 characters</strong> long.",
   "global.staleTxnWarningLine1": "Your wallet has changed since you created this transaction.",
   "global.staleTxnWarningLine2": "You can still send this transaction but it may fail.",
