--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -473,6 +473,8 @@
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "make a transaction",
   "wallet.dashboard.summary.note": "Less than you expected?",
+  "wallet.dashboard.summary.adaAmountNote1": "To be able to send this amount",
+  "wallet.dashboard.summary.adaAmountNote2": "you should withdraw Rewards first",
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
   "wallet.dashboard.summary.title": "Your Summary",
   "wallet.dashboard.upcomingRewards.at": "at",
