--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -473,14 +473,15 @@
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "make a transaction",
   "wallet.dashboard.summary.note": "Less than you expected?",
-  "wallet.dashboard.summary.adaAmountNote1": "To be able to send this amount",
-  "wallet.dashboard.summary.adaAmountNote2": "you should withdraw Rewards first",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
   "wallet.dashboard.summary.title": "Your Summary",
   "wallet.dashboard.upcomingRewards.at": "at",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of Epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "no rewards will be earned on this epoch",
   "wallet.dashboard.upcomingRewards.title": "Upcoming Rewards",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake Pool Delegated",
   "wallet.dashboard.warning.pendingTx": "Staking dashboard information will update once your pending transaction is confirmed",
   "wallet.debugwallet.explanation1": "The wallet you selected ({checksumTextPart}) is for testing & debugging.",
   "wallet.debugwallet.explanation2": "To avoid any issues, do not use this wallet.<br />Instead, use Yoroi to create a new wallet.",
