--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -327,6 +327,8 @@
   "uri.invalid.dialog.title": "Invalid URL",
   "uri.invalid.dialog.warning.text1": "The link you clicked is invalid.",
   "uri.invalid.dialog.warning.text2": "Please ask the receiver to double-check the format.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "I understand",
   "uri.landing.dialog.title": "Perform a transaction from a Cardano URL",
   "uri.landing.dialog.warning.line1": "Make sure:",
